--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "style-resources-loader": "^1.3.2",
     "typescript": "~3.5.3",
     "vue-cli-plugin-style-resources-loader": "^0.1.4",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vuex-class": "^0.3.2"
   }
 }
